fix: replace the onClick event of forms to close them with the onMouseDown event; setting the stretchable height of Schedule cells for high screen resolutions

--- a/src/components/Schedule/Schedule.css
+++ b/src/components/Schedule/Schedule.css
@@ -15,7 +15,6 @@
 
 .schedule__block {
   overflow: hidden;
-  max-height: 84vh;
   perspective: 400px;
   perspective-origin: top;
 }
@@ -27,7 +26,8 @@
    #cd9929, #e7de87, #AA771C);
   margin-left: 1%;
   margin-right: 1%;
-  margin-bottom: 1%;
+  margin-bottom: 8px;
+  height: 11vh;
   position: relative;
   box-shadow: inset 0px 0px 3px 3px #e1d29b,
    5px 0px 7px 3px #4a4437, -5px 0px 7px 3px #4a4437;
@@ -56,30 +56,6 @@
   transform: rotateX(358deg) scale(0.991);
 }
 
-/* .card:last-of-type ::after {
-  content: '\00a0 \00a0 следующий день';
-  color: white;
-  display: none;
-  height: 100%;
-  width: 100%;
-  position: absolute;
-  top: 0px;
-  right: 0px;
-  background-color: #977a1c;
-}
-
-.card:first-of-type ::after {
-  content: '\00a0 \00a0 предыдущий день';
-  color: white;
-  display: none;
-  height: 100%;
-  width: 100%;
-  position: absolute;
-  top: 0px;
-  right: 0px;
-  background-color: #977a1c;
-} */
-
 .card__date {
   margin-top: 5px;
   margin-bottom: 0;
@@ -98,12 +74,14 @@
   justify-content: flex-start;
   color: black;
   font-weight: 500;
+  height: 77%;
 }
 
 .card__element {
   display: flex;
   flex-direction: column;
   flex: 1;
+  justify-content: space-evenly;
   max-width: calc((100% / 4) - 10px);
   min-height:  67px;
   padding: 6px;
@@ -164,22 +142,6 @@
   transform: translateY(-5px) ;
   transition: all 290ms ease-in-out;
 }
-
-
-/* .scrolldown-enter .card__layout-element{
-
-}
-
-.scrolldown-enter-active .card__layout-element{
-
-  transform: translateY(-150%);
-  transition: all 290ms ease-out;
-}
-
-.scrolldown-enter-done .card__layout-element{
-  opacity: 1;
-  transform: translateY(-150%);
-} */
 
 /* <==== CSSTransition end */
 
